gatekeeper/constraints/no-host-network.yaml
# Lab 1.2 - Cấm hostNetwork: true
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snohostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sNoHostNetwork
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8snohostnetwork

      violation[{"msg": msg}] {
        input.review.object.spec.template.spec.hostNetwork == true
        msg := "hostNetwork: true bị cấm — Pod không được dùng network của host."
      }

      violation[{"msg": msg}] {
        input.review.object.spec.hostNetwork == true
        msg := "hostNetwork: true bị cấm — Pod không được dùng network của host."
      }

---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoHostNetwork
metadata:
  name: no-host-network
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["", "apps", "argoproj.io"]
      kinds: ["Pod", "Deployment", "StatefulSet", "DaemonSet", "Rollout"]
    namespaces:
    - demo
